quick fix: Give old GL eink single PSA a z-index to have it render over delay badge

--- a/assets/css/eink/green_line/departures.scss
+++ b/assets/css/eink/green_line/departures.scss
@@ -79,3 +79,8 @@
   bottom: 52px;
   right: 0px;
 }
+
+.departures-list-psa {
+  position: relative;
+  z-index: 1;
+}
